# orderbook

./: Cargo.toml  Dockerfile.server  Dockerfile.ui
.github/workflows/: docker.yml
contracts/: Cargo.toml  build.rs  metadata.rs
contracts/orderbook/: Cargo.toml
contracts/orderbook/src/: indexer.rs  lib.rs  main.rs  optimistic_commitments.rs  tests.rs
contracts/orderbook/src/client/: tx_executor_handler.rs
elf/: orderbook
front/: .env  .env.production  bun.lockb  index.html  package-lock.json  package.json  plan.md  vite.config.ts
front/src/: App.css  App.tsx  index.css
front/src/components/: PairPage.tsx  index.ts
front/src/components/CandleChart/: CandleChart.tsx  index.ts
front/src/components/DepositForm/: DepositForm.tsx
front/src/components/DepthChart/: DepthChart.tsx  index.ts
front/src/components/MarketInfoBanner/: MarketInfoBanner.css  MarketInfoBanner.tsx  index.ts
front/src/components/MarketSelector/: MarketSelector.css  MarketSelector.tsx  index.ts
front/src/components/Orderbook/: Orderbook.css  Orderbook.tsx  OrderbookHeader.tsx  OrderbookRow.tsx  OrderbookSpread.tsx  index.ts  types.ts
front/src/components/Positions/: Positions.tsx  index.ts
front/src/components/TradingForm/: TradingForm.tsx  index.ts
front/src/constants/: assets.ts
front/src/contexts/: AppContext.tsx  OrderbookContext.tsx  PositionsContext.tsx
front/src/hooks/: useOrderbook.ts  useOrderbookData.ts  useOrderbookManager.ts  useOrderbookState.ts  useOrderbookWebSocket.ts  usePositions.ts  useTradingData.ts
front/src/models/: Orderbook.ts
front/src/services/: NodeService.ts  OrderbookService.ts  OrderbookWsService.ts  WebSocketService.ts  orderbookApi.ts
front/src/styles/: GlobalStyle.ts  theme.ts
front/src/types/: api.ts  orderbook.ts  position.ts
front/src/utils/: mockData.ts
server/: Cargo.toml
server/src/: app.rs  conf.rs  conf_defaults.toml  init.rs  lib.rs  main.rs  rollup_executor.rs
