[package]
name = "server"
edition = "2021"

[[bin]]
name = "tx_sender"
path = "src/bin/tx_sender.rs"

[dependencies]
sdk = { workspace = true, features = ["tracing"] }
client-sdk = { workspace = true, features = ["sp1", "rest"] }
hyle-modules = { workspace = true }
wallet = { workspace = true, features = ["client"] }
orderbook = { workspace = true, features = ["client"] }
contracts = { workspace = true, features = [] }

sp1-sdk = { version = "4.1.3", default-features = false, features = [
    "network",
] }

config = { version = "0.15.11", default-features = false, features = ["toml"] }
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0.93"
reqwest = { version = "0.12.9", features = ["json"] }
hex = "0.4.3"
sha2 = "0.10.8"
hmac = "0.12.1"
secp256k1 = { version = "0.30.0", features = ["hashes"] }
uuid = { version = "1.16.0", features = ["v4"] }

rand = "0.9.0"
borsh = "1.5.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = "4.5.28"
utoipa-axum = { version = "0.2.0" }
utoipa = "5.3.1"

opentelemetry = { version = "0.28" }
opentelemetry-prometheus = { version = "0.28.0" }
opentelemetry_sdk = "0.28.0"
prometheus = { version = "0.13.4" }
